--- a/package.json
+++ b/package.json
@@ -21,28 +21,29 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "@nuxt/devtools": "latest",
-    "@nuxt/image": "^1.3.0",
-    "@nuxt/test-utils": "^3.11.0",
+    "@nuxt/image": "^1.4.0",
+    "@nuxt/test-utils": "^3.12.0",
     "@nuxtjs/color-mode": "^3.3.2",
-    "@nuxtjs/seo": "^2.0.0-rc.8",
+    "@nuxtjs/seo": "^2.0.0-rc.9",
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "@types/node": "^20.11.24",
+    "@types/node": "^20.11.29",
     "@types/nodemailer": "^6.4.14",
-    "@vite-pwa/nuxt": "^0.5.0",
+    "@vite-pwa/nuxt": "^0.6.0",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
-    "nuxt": "^3.10.3",
-    "nuxt-gtag": "^2.0.4",
+    "nuxt": "^3.11.1",
+    "nuxt-gtag": "^2.0.5",
     "nuxt-icons": "^3.2.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.14",
+    "@splidejs/splide-extension-grid": "^0.4.1",
     "@splidejs/vue-splide": "^0.6.12",
     "@vue-email/nuxt": "^0.8.19",
-    "nodemailer": "^6.9.11",
-    "vee-validate": "^4.12.5",
-    "yaml": "^2.4.0"
+    "nodemailer": "^6.9.12",
+    "vee-validate": "^4.12.6",
+    "yaml": "^2.4.1"
   }
 }
