chore: pkgs updated

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,5 +56,5 @@ jobs:
           port: 22
           overwrite: true
           rm: true
-          source: 'portfolio-shirsendu'
+          source: '/*'
           target: ~/portfolio-shirsendu
