--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": "^20.11.0"
+    "node": "^20.12.2"
   },
   "license": "LGPL-3.0-or-later",
   "scripts": {
@@ -15,35 +15,35 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "start": "node .output/server/index.mjs",
-    "clean": "nuxt cleanup"
-  },
-  "devDependencies": {
-    "@changesets/cli": "^2.27.1",
-    "@nuxt/devtools": "latest",
-    "@nuxt/image": "^1.5.0",
-    "@nuxt/test-utils": "^3.12.1",
-    "@nuxtjs/color-mode": "^3.4.0",
-    "@nuxtjs/seo": "^2.0.0-rc.10",
-    "@nuxtjs/tailwindcss": "^6.12.0",
-    "@types/node": "^20.12.7",
-    "@types/nodemailer": "^6.4.14",
-    "@vite-pwa/nuxt": "^0.6.0",
-    "@vueuse/core": "^10.9.0",
-    "@vueuse/nuxt": "^10.9.0",
-    "nuxt": "^3.11.2",
-    "nuxt-gtag": "^2.0.5",
-    "nuxt-icons": "^3.2.1",
-    "vue": "^3.4.23",
-    "vue-router": "^4.3.2"
+    "clean": "nuxt cleanup",
+    "start": "node .output/server/index.mjs"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
     "@splidejs/splide-extension-grid": "^0.4.1",
     "@splidejs/vue-splide": "^0.6.12",
-    "@vue-email/nuxt": "^0.8.19",
     "nodemailer": "^6.9.13",
     "vee-validate": "^4.12.6",
-    "yaml": "^2.4.1"
+    "yaml": "^2.4.2"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.27.1",
+    "@nuxt/fonts": "^0.7.0",
+    "@nuxt/image": "^1.7.0",
+    "@nuxt/test-utils": "^3.12.1",
+    "@nuxtjs/color-mode": "^3.4.1",
+    "@nuxtjs/seo": "^2.0.0-rc.10",
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "@types/node": "^20.12.8",
+    "@types/nodemailer": "^6.4.15",
+    "@vite-pwa/nuxt": "^0.7.0",
+    "@vue-email/nuxt": "^0.8.19",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/nuxt": "^10.9.0",
+    "nuxt": "^3.11.2",
+    "nuxt-gtag": "^2.0.5",
+    "nuxt-icons": "^3.2.1",
+    "vue": "^3.4.26",
+    "vue-router": "^4.3.2"
   }
 }
