--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
 
+      - name: Display structure of downloaded files
+        run: ls -R
+
       - name: Upload artifact to VPS
         uses: appleboy/scp-action@v0.1.4
         with:
