--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: portfolio-shirsendu
+          name: dist
           path: |
             .output
             projects.yml
@@ -59,5 +59,5 @@ jobs:
           port: 22
           # overwrite: true
           # rm: true
-          source: portfolio-shirsendu/*
-          target: portfolio-shirsendu
+          source: dist/.output dist/certificates.yml dist/experiences.yml dist/hackathons.yml dist/projects.yml
+          target: ~/portfolio-shirsendu/
