fix: updated deply.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: dist
+          name: artifact
           path: |
             .output
             projects.yml
@@ -46,12 +46,15 @@ jobs:
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
+        with:
+          name: artifact
+          path: dist
 
       - name: Display structure of downloaded files
         run: ls -R -a
 
       - name: Upload artifact to VPS
-        uses: appleboy/scp-action@v0.1.4
+        uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
@@ -59,5 +62,5 @@ jobs:
           port: 22
           # overwrite: true
           # rm: true
-          source: dist/.output dist/certificates.yml dist/experiences.yml dist/hackathons.yml dist/projects.yml
+          source: dist/*
           target: ~/portfolio-shirsendu/
