fix: contact me button not visible, NuxtImg use

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,5 +57,5 @@ jobs:
           source: artifact/*
           target: ~/portfolio-shirsendu/
           overwrite: true
-          rm: true
+          # rm: true
           strip_components: 1
