--- a/package.json
+++ b/package.json
@@ -12,38 +12,47 @@
   "scripts": {
     "postinstall": "nuxt prepare",
     "dev": "nuxt dev",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier .  --write",
     "build": "nuxt build",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "start": "node .output/server/index.mjs",
+    "tunnel": "npx untun tunnel --port 3000",
     "clean": "nuxt cleanup"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
-    "@splidejs/splide-extension-grid": "^0.4.1",
-    "@splidejs/vue-splide": "^0.6.12",
-    "nodemailer": "^6.9.13",
-    "nuxt": "^3.11.2",
-    "vee-validate": "^4.12.8",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.2",
-    "yaml": "^2.4.2"
-  },
-  "devDependencies": {
-    "@changesets/cli": "^2.27.5",
     "@nuxt/fonts": "^0.7.0",
     "@nuxt/image": "^1.7.0",
-    "@nuxt/test-utils": "^3.13.1",
     "@nuxtjs/color-mode": "^3.4.1",
     "@nuxtjs/seo": "^2.0.0-rc.10",
     "@nuxtjs/tailwindcss": "^6.12.0",
-    "@types/node": "^20.13.0",
-    "@types/nodemailer": "^6.4.15",
+    "@splidejs/splide-extension-grid": "^0.4.1",
     "@vite-pwa/nuxt": "^0.8.0",
     "@vue-email/nuxt": "^0.8.19",
-    "@vueuse/core": "^10.10.0",
     "@vueuse/nuxt": "^10.10.0",
+    "confbox": "^0.1.7",
+    "date-fns": "^3.6.0",
+    "nodemailer": "^6.9.13",
+    "nuxt": "^3.11.2",
     "nuxt-gtag": "^2.0.6",
-    "nuxt-icons": "^3.2.1"
+    "nuxt-icons": "^3.2.1",
+    "nuxt-splide": "^1.1.1",
+    "vee-validate": "^4.12.8",
+    "vue": "^3.4.27",
+    "vue-router": "^4.3.2"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.27.5",
+    "@nuxt/eslint": "^0.3.13",
+    "@nuxt/test-utils": "^3.13.1",
+    "@types/node": "^20.13.0",
+    "@types/nodemailer": "^6.4.15",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.2",
+    "untun": "^0.1.3"
   }
 }
