--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "start": "node .output/server/index.mjs",
     "tunnel": "npx untun tunnel --port 3000",
     "clean": "nuxt cleanup",
-    "docker:build": "docker build -t portfolio-shirsendu .",
-    "docker:start": "docker run --env-file .env.prod -p 3000:3000 portfolio-shirsendu"
+    "docker:build": "docker build --build-arg TAG=latest -t portfolio-shirsendu:latest .",
+    "docker:start": "docker run --env-file .env.prod -p 1000:3000 portfolio-shirsendu:latest"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
@@ -32,29 +32,31 @@
     "@nuxtjs/seo": "^2.0.0-rc.10",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@splidejs/splide-extension-grid": "^0.4.1",
-    "@vite-pwa/nuxt": "^0.8.0",
-    "@vue-email/nuxt": "^0.8.19",
+    "@vite-pwa/nuxt": "^0.8.1",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "@vue-email/components": "^0.0.17",
+    "@vue-email/render": "^0.0.9",
     "@vueuse/nuxt": "^10.11.0",
     "confbox": "^0.1.7",
     "date-fns": "^3.6.0",
-    "nodemailer": "^6.9.13",
+    "nodemailer": "^6.9.14",
     "nuxt-gtag": "^2.0.6",
     "nuxt-icons": "^3.2.1",
     "nuxt-splide": "^1.1.1",
     "vee-validate": "^4.13.1",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.5",
     "@nuxt/eslint": "^0.3.13",
     "@nuxt/test-utils": "^3.13.1",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.8",
     "@types/nodemailer": "^6.4.15",
     "eslint-config-prettier": "^9.1.0",
     "nuxt": "^3.12.2",
     "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.4",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "untun": "^0.1.3"
   }
 }
