--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,8 @@ on:
   release:
     types: [published]
 
+  workflow_dispatch:
+
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 env:
@@ -16,46 +18,41 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
         with:
-          node-version: '20.x'
-          cache: 'npm'
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install Dependencies
-        run: npm ci
-
-      - name: Bulid Artifacts
-        run: npm run build
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - name: Build and push
+        uses: docker/build-push-action@v6
         with:
-          name: artifact
-          path: |
-            .output
-            projects.yml
-            experiences.yml
-            hackathons.yml
-            certificates.yml
-          if-no-files-found: error
+          push: true
+          tags: ${{ github.actor }}/${{ github.repository }}:latest
 
   deploy:
     needs: build
     runs-on: ubuntu-24.04
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload artifact to VPS
-        uses: appleboy/scp-action@v0.1.7
+      - name: Deploy to VPS
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          port: 22
-          source: artifact/*
-          target: ~/portfolio-shirsendu/
-          overwrite: true
-          # rm: true
-          strip_components: 1
+          script: |
+            docker stop ${{ github.repository }} || true
+            docker rm ${{ github.repository }} || true
+            docker pull ghcr.io/${{ github.actor }}/${{ github.repository }}:latest
+            docker run -d -p 1000:3000 --name ${{ github.repository }} ghcr.io/${{ github.repository }}:latest
