--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,35 +15,72 @@ jobs:
   build:
     runs-on: ubuntu-24.04
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Login to GHCR
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          push: true
-          tags: ${{ github.actor }}/${{ github.repository }}:latest
+          tags: ${{ github.repository }}:latest
+          outputs: type=docker,dest=/tmp/artifact.tar
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: artifact
+          path: /tmp/artifact.tar
 
   deploy:
     needs: build
     runs-on: ubuntu-24.04
     steps:
-      - name: Login to GHCR
-        uses: docker/login-action@v3
+      # - name: Login to GHCR
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
+
+      # - name: Deploy to VPS
+      #   uses: appleboy/ssh-action@v1.0.3
+      #   with:
+      #     host: ${{ secrets.HOST }}
+      #     username: ${{ secrets.USERNAME }}
+      #     password: ${{ secrets.PASSWORD }}
+      #     script: |
+      #       docker stop ${{ github.repository }} || true
+      #       docker rm ${{ github.repository }} || true
+      #       docker pull ghcr.io/${{ github.actor }}/${{ github.repository }}:latest
+      #       docker run -d -p 1000:3000 --name ${{ github.repository }} ghcr.io/${{ github.repository }}:latest
+
+      - name: Download artifact
+        uses: actions/download-artifact@v4
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          name: artifact
+          path: /tmp
+
+      - name: Rename
+        run: mv /tmp/artifact.tar /tmp/${{ github.repository }}.tar
+
+      - name: Upload artifact to VPS
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: 22
+          source: /tmp/${{ github.repository }}.tar
+          target: ~/
+          overwrite: true
+          # rm: true
+          # strip_components: 1
 
       - name: Deploy to VPS
         uses: appleboy/ssh-action@v1.0.3
@@ -54,5 +91,6 @@ jobs:
           script: |
             docker stop ${{ github.repository }} || true
             docker rm ${{ github.repository }} || true
-            docker pull ghcr.io/${{ github.actor }}/${{ github.repository }}:latest
+            docker load --input ~/${{ github.repository }}.tar
+            docker image ls -a 
             docker run -d -p 1000:3000 --name ${{ github.repository }} ghcr.io/${{ github.repository }}:latest
