--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,15 +2,28 @@ name: Nuxt Release
 
 on:
   push:
-    tags:
-      - 'v*.*.*'
+    branches:
+      - main
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
+      - name: Generate Changelog
+        uses: scottbrenner/generate-changelog-action@master
+        id: Changelog
+        env:
+          REPO: ${{ github.repository }}
+
       - name: Release
         uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ github.ref }}
+          body: |
+            ${{ steps.Changelog.outputs.changelog }}
+          draft: false
+          make_latest: true
+          prerelease: false
