--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,16 @@
 name: Nuxt CD
 
 on:
-  release:
-    types: [published]
-
   workflow_dispatch:
+  push:
+    tags:
+      - 'v*.*.*'
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 env:
   REPO_NAME: ${{ github.event.repository.name }}
-  OLD_TAG: ${{ github.event.release.tag_name }}
+  OLD_TAG: ${{ '' }}
   NEW_TAG: ${{ github.ref_name }}
   IN_PORT: 1000
   OUT_PORT: 3000
