--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,47 +22,48 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # - name: Login to GHCR
-      #   uses: docker/login-action@v3
-      #   with:
-      #     registry: ghcr.io
-      #     username: ${{ github.actor }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and Export
         uses: docker/build-push-action@v6
         with:
+          context: .
+          push: true
+          tags: 'algostract/${{ env.REPO_NAME }}:${{ env.NEW_TAG }}'
           build-args: TAG=${{ env.NEW_TAG }}
-          tags: '${{ env.REPO_NAME }}:${{ env.NEW_TAG }}'
-          outputs: type=docker,dest=/tmp/artifact.tar
 
-      - name: Upload artifact to VPS
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          port: 22
-          source: /tmp/artifact.tar
-          target: ~/${{ env.REPO_NAME }}
-          overwrite: true
-          # rm: true
-          # strip_components: 1
+      # - name: Upload artifact to VPS
+      #   uses: appleboy/scp-action@v0.1.7
+      #   with:
+      #     host: ${{ secrets.HOST }}
+      #     username: ${{ secrets.USERNAME }}
+      #     password: ${{ secrets.PASSWORD }}
+      #     port: 22
+      #     source: /tmp/artifact.tar
+      #     target: ~/${{ env.REPO_NAME }}
+      #     overwrite: true
+      #     # rm: true
+      #     # strip_components: 1
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-24.04
-    steps:
-      #    docker pull ghcr.io/${{ github.actor }}/${{ github.repository }}:latest
-      - name: Deploy to VPS
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          script: |
-            docker stop ${{ env.REPO_NAME }}-${{ env.OLD_TAG }}
-            docker rm ${{ env.REPO_NAME }}-${{ env.OLD_TAG }}
-            docker rmi ${{ env.REPO_NAME }}:${{ env.OLD_TAG }}
-            docker load --input ~/${{ env.REPO_NAME }}/artifact.tar
-            docker run --name ${{ env.REPO_NAME }}-${{ env.NEW_TAG }} --env-file .env.prod -p ${{ env.IN_PORT }}:${{ env.OUT_PORT }} -d ${{ env.REPO_NAME }}:${{ env.NEW_TAG }}
+  # deploy:
+  #   needs: build
+  #   runs-on: ubuntu-24.04
+  #   steps:
+  #     #    docker pull ghcr.io/${{ github.actor }}/${{ github.repository }}:latest
+  #     - name: Deploy to VPS
+  #       uses: appleboy/ssh-action@v1.0.3
+  #       with:
+  #         host: ${{ secrets.HOST }}
+  #         username: ${{ secrets.USERNAME }}
+  #         password: ${{ secrets.PASSWORD }}
+  #         script: |
+  #           docker stop ${{ env.REPO_NAME }}-${{ env.OLD_TAG }}
+  #           docker rm ${{ env.REPO_NAME }}-${{ env.OLD_TAG }}
+  #           docker rmi ${{ env.REPO_NAME }}:${{ env.OLD_TAG }}
+  #           docker load --input ~/${{ env.REPO_NAME }}/artifact.tar
+  #           docker run --name ${{ env.REPO_NAME }}-${{ env.NEW_TAG }} --env-file .env.prod -p ${{ env.IN_PORT }}:${{ env.OUT_PORT }} -d ${{ env.REPO_NAME }}:${{ env.NEW_TAG }}
