--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
     "start": "node .output/server/index.mjs",
     "tunnel": "npx untun tunnel --port 3000  http://localhost:3000",
     "clean": "nuxt cleanup",
-    "docker:build": "docker build --build-arg TAG=latest -t portfolio-shirsendu:latest .",
+    "docker:build": "docker build --build-arg TAG=1.11.2 -t portfolio-shirsendu:1.11.2 .",
     "docker:start": "docker run --env-file .env.prod -p 1000:3000 portfolio-shirsendu:latest"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
-    "@nuxt/fonts": "^0.7.0",
+    "@nuxt/fonts": "^0.7.1",
     "@nuxt/image": "^1.7.0",
-    "@nuxtjs/color-mode": "^3.4.1",
+    "@nuxtjs/color-mode": "^3.4.2",
     "@nuxtjs/seo": "^2.0.0-rc.11",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@splidejs/splide-extension-grid": "^0.4.1",
-    "@vite-pwa/nuxt": "^0.8.1",
+    "@vite-pwa/nuxt": "^0.9.0",
     "@vitejs/plugin-vue": "^5.0.5",
-    "@vue-email/components": "^0.0.17",
+    "@vue-email/components": "^0.0.19",
     "@vue-email/render": "^0.0.9",
     "@vueuse/nuxt": "^10.11.0",
     "confbox": "^0.1.7",
@@ -44,17 +44,17 @@
     "nuxt-icons": "^3.2.1",
     "nuxt-splide": "^1.1.1",
     "vee-validate": "^4.13.1",
-    "vue": "^3.4.30",
+    "vue": "^3.4.31",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.6",
+    "@changesets/cli": "^2.27.7",
     "@nuxt/eslint": "^0.3.13",
     "@nuxt/test-utils": "^3.13.1",
-    "@types/node": "^20.14.8",
+    "@types/node": "^20.14.9",
     "@types/nodemailer": "^6.4.15",
     "eslint-config-prettier": "^9.1.0",
-    "nuxt": "^3.12.2",
+    "nuxt": "^3.12.3",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "untun": "^0.1.3"
