--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,11 @@ on:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 env:
+  REPO_NAME: ${{ github.event.repository.name }}
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ghcr.io/${{ github.repository }}
+  VERSION_TAG: ${{ github.ref }}
+  PORT: 1000
 
 jobs:
   build:
@@ -30,36 +33,36 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ github.actor }} # ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.GITHUB_TOKEN }} # ${{ secrets.REGISTRY_PASSWORD }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.IMAGE_NAME }}
 
       - name: Build and push Docker image
         id: push
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          build-args: VERSION_TAG=${{ env.VERSION_TAG }}
+          tags: ${{ env.IMAGE_NAME }}\:${{ env.VERSION_TAG }}
           labels: ${{ steps.meta.outputs.labels }}
-          build-args: TAG=${{ steps.meta.outputs.tags }}
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+          subject-name: ${{ env.IMAGE_NAME }}
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
 
   deploy:
     needs: build
     runs-on: ubuntu-24.04
+
     steps:
-      #    docker pull ghcr.io/${{ github.actor }}/${{ github.repository }}:latest
       - name: Deploy to VPS
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -67,8 +70,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           script: |
-            docker stop ${{ env.REPO_NAME }}-${{ env.OLD_TAG }}
-            docker rm ${{ env.REPO_NAME }}-${{ env.OLD_TAG }}
-            docker rmi ${{ env.REPO_NAME }}:${{ env.OLD_TAG }}
-            docker load --input ~/${{ env.REPO_NAME }}/artifact.tar
-            docker run --name ${{ env.REPO_NAME }}-${{ env.NEW_TAG }} --env-file .env.prod -p ${{ env.IN_PORT }}:${{ env.OUT_PORT }} -d ${{ env.REPO_NAME }}:${{ env.NEW_TAG }}
+            docker ps -q --filter ancestor=${{ env.IMAGE_NAME }} | xargs -r docker stop
+            docker ps -a -q --filter ancestor=${{ env.IMAGE_NAME }} | xargs -r docker rm
+            docker rmi ${{ env.IMAGE_NAME }}
+            docker pull ${{ env.IMAGE_NAME }}:${{ env.VERSION_TAG }}
+            docker run --name ${{ env.REPO_NAME }} --env-file  ~/${{ env.REPO_NAME }}/.env.prod -p ${{ env.PORT }}:3000 ${{ env.IMAGE_NAME }}:${{ env.VERSION_TAG }}
